tests/valid/geometry/intersect_polygon_clip_area.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "intersect_polygon_clip_area",
    "description": "M4 schema fixture (RFC semiring-faq-unified-ir §8.1 / Appendix B; CONFORMANCE_SPEC.md §5.8; bead ess-my4.4.2): the conservative-regridding geometry-kernel split. The REQUIRED new op is the `intersect_polygon` LEAF — `{ op: intersect_polygon, args: [poly_a, poly_b], manifold: spherical }` — which clips two lon-lat polygon rings and returns the overlap vertex ring of DATA-DEPENDENT length. That ring rides the M3 value-invention machinery with no new schema: the clip node carries an `id` (\"overlap_clip\") and the ring's vertex set is exposed as a kind:\"derived\" index set via from_faq (§5.2). `polygon_area` is NOT a new op — it is an ORDINARY sum_product FAQ over that ring (planar shoelace / Gauss–Green / spherical excess), structurally identical to the §7.3 area_eff example, so the only geometry-specific schema is the `intersect_polygon` op + its `manifold` flag. Polygons are ordinary [verts, coord] coordinate arrays; the lon-lat pair is the dense `coord` interval — no bespoke polygon/ring type is needed. This is a STRUCTURAL fixture: it validates against the additive schema with no evaluator (the Julia/Rust/Python clip kernels are ess-my4.4.3/.4/.11/.12; their cross-binding conformance is tolerance-based per §5.8). The area integrand below is illustrative of the sum_product STRUCTURE; the exact shoelace / spherical-excess body is supplied by the evaluator kernels.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.furiosa"
    ],
    "tags": [
      "geometry",
      "intersect_polygon",
      "manifold",
      "polygon-area",
      "conservative-regridding",
      "value-invention",
      "conformance",
      "schema",
      "ess-my4.4.2"
    ]
  },
  "models": {
    "PolygonClipArea": {
      "index_sets": {
        "coord": {
          "kind": "interval",
          "size": 2
        },
        "src_verts": {
          "kind": "interval",
          "size": 4
        },
        "tgt_verts": {
          "kind": "interval",
          "size": 4
        },
        "clip_ring": {
          "kind": "derived",
          "from_faq": "overlap_clip"
        }
      },
      "variables": {
        "src_poly": {
          "type": "parameter",
          "shape": ["src_verts", "coord"],
          "description": "Source cell as a closed lon-lat vertex ring: src_poly[v, 1]=lon, src_poly[v, 2]=lat. An ordinary coordinate array — the `poly_a` operand of the clip."
        },
        "tgt_poly": {
          "type": "parameter",
          "shape": ["tgt_verts", "coord"],
          "description": "Target cell as a closed lon-lat vertex ring — the `poly_b` operand of the clip."
        },
        "clip": {
          "type": "observed",
          "shape": ["clip_ring", "coord"],
          "description": "The clipped overlap ring A ∩ B, of data-dependent length: the `intersect_polygon` leaf output. Its `expression` is the kernel leaf; its vertex set is the derived `clip_ring` index set (from_faq:\"overlap_clip\").",
          "expression": {
            "op": "intersect_polygon",
            "id": "overlap_clip",
            "manifold": "spherical",
            "args": ["src_poly", "tgt_poly"]
          }
        },
        "area": {
          "type": "observed",
          "shape": [],
          "description": "Overlap area A_ij = polygon_area(clip): an ORDINARY sum_product FAQ over the clipped ring (NOT a new op). The body shown is an illustrative cross-term over the ring vertices; the exact planar-shoelace / spherical-excess integrand is the evaluator's (ess-my4.4.3).",
          "expression": {
            "op": "aggregate",
            "semiring": "sum_product",
            "output_idx": [],
            "ranges": {
              "v": { "from": "clip_ring" }
            },
            "args": ["clip"],
            "expr": {
              "op": "*",
              "args": [
                0.5,
                { "op": "index", "args": ["clip", "v", 1] },
                { "op": "index", "args": ["clip", "v", 2] }
              ]
            }
          }
        },
        "tracer": {
          "type": "state",
          "shape": [],
          "description": "A scalar tracer whose decay rate is weighted by the overlap area — makes this a well-formed ODE system that consumes the geometry FAQ."
        }
      },
      "equations": [
        {
          "_comment": "Well-formed ODE that uses the area FAQ: d(tracer)/dt = -area·tracer. `area` is the observed polygon_area over the intersect_polygon ring.",
          "lhs": {
            "op": "D",
            "args": ["tracer"],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              -1.0,
              "area",
              "tracer"
            ]
          }
        }
      ]
    }
  }
}
